services.html im Backend aufgenommen

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ a,
 
   <script type="module">
     import ColorManager from './js/color-manager.js';
-    import ContentManager from './js/content-manager.js';
+    import ContentManager from './js/homepage-content-manager.js';
     import TestimonialsManager from './js/testimonials-manager.js';
   </script>
 
