--- a/services.html
+++ b/services.html
@@ -304,12 +304,12 @@ a,
             <div class="padding-section-large">
               <div class="max-width-large">
                 <div class="margin-bottom margin-small">
-                  <h1>Build. Repair. Tune.</h1>
+                  <h1 data-content="services_header_title">Build. Repair. Tune.</h1>
                 </div>
-                <p class="text-size-medium">Experience the best in building, repairing, and tuning FPV drones.</p>
+                <p class="text-size-medium" data-content="services_header_description">Experience the best in building, repairing, and tuning FPV drones.</p>
                 <div class="margin-top margin-medium">
                   <div class="button-group-2">
-                    <a href="contact.html" class="button-2 w-button">Contact</a>
+                    <a href="contact.html" class="button-2 w-button" data-content="services_header_button">Contact</a>
                   </div>
                 </div>
               </div>
@@ -323,11 +323,11 @@ a,
             <div class="padding-section-large">
               <div class="drone-garage_features-list_component">
                 <div class="margin-bottom margin-xsmall">
-                  <div class="text-weight-semibold">Building </div>
+                  <div class="text-weight-semibold" data-content="services_building_subtitle">Building</div>
                 </div>
                 <div class="margin-bottom margin-xxlarge">
                   <div class="max-width-large">
-                    <h3>Build Your Dream Drone with Our Expertise</h3>
+                    <h3 data-content="services_building_title">Build Your Dream Drone with Our Expertise</h3>
                   </div>
                 </div>
                 <div class="w-layout-grid drone-garage_features-list_list">
@@ -335,9 +335,9 @@ a,
                     <div class="margin-bottom margin-small"><img src="images/design.svg" loading="lazy" alt=""
                         class="icon-1x1-medium"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h5">Custom Design and Construction</h3>
+                      <h3 class="heading-style-h5" data-content="services_building_feature1_title">Custom Design and Construction</h3>
                     </div>
-                    <p>From the ground up, we design and build drones tailored to your exact specifications. Whether you
+                    <p data-content="services_building_feature1_text">From the ground up, we design and build drones tailored to your exact specifications. Whether you
                       need a racing drone, a cinematic FPV drone, or a custom solution for unique needs, we turn your
                       vision into reality.</p>
                   </div>
@@ -345,9 +345,9 @@ a,
                     <div class="margin-bottom margin-small"><img src="images/components.svg" loading="lazy" alt=""
                         class="icon-1x1-medium"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h5">High-Quality Components</h3>
+                      <h3 class="heading-style-h5" data-content="services_building_feature2_title">High-Quality Components</h3>
                     </div>
-                    <p>We use only the best components to ensure top performance and reliability. Our extensive
+                    <p data-content="services_building_feature2_text">We use only the best components to ensure top performance and reliability. Our extensive
                       knowledge of the latest technology means your drone will be equipped with cutting-edge parts,
                       providing you with an unbeatable flying experience.</p>
                   </div>
@@ -355,9 +355,9 @@ a,
                     <div class="margin-bottom margin-small"><img src="images/tuning.svg" loading="lazy" alt=""
                         class="icon-1x1-medium"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h5">Expert Assembly and Tuning</h3>
+                      <h3 class="heading-style-h5" data-content="services_building_feature3_title">Expert Assembly and Tuning</h3>
                     </div>
-                    <p>Our meticulous assembly process and precise tuning guarantee optimal performance. We fine-tune
+                    <p data-content="services_building_feature3_text">Our meticulous assembly process and precise tuning guarantee optimal performance. We fine-tune
                       each drone for perfect balance, responsiveness, and stability, so you can enjoy smooth flights and
                       exceptional control.</p>
                   </div>
@@ -374,16 +374,13 @@ a,
               <div class="w-layout-grid drone-garage_feature-1_component">
                 <div class="drone-garage_feature-1_content">
                   <div class="margin-bottom margin-xsmall">
-                    <div class="text-weight-semibold">Customization </div>
+                    <div class="text-weight-semibold" data-content="services_customization_subtitle">Customization</div>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <h2>Tailor Your Drone to Perfection</h2>
+                    <h2 data-content="services_customization_title">Tailor Your Drone to Perfection</h2>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <p class="text-size-medium">Customization is key to getting the most out of your FPV drone. We offer
-                      a wide range of options to personalize your drone, ensuring it meets your specific needs and
-                      preferences. From aesthetic enhancements to performance upgrades, our customization services help
-                      you achieve the perfect drone.</p>
+                    <p class="text-size-medium" data-content="services_customization_description">Customization is key to getting the most out of your FPV drone. We offer a wide range of options to personalize your drone, ensuring it meets your specific needs and preferences. From aesthetic enhancements to performance upgrades, our customization services help you achieve the perfect drone.</p>
                   </div>
                 </div>
                 <div class="drone-garage_feature-1_image-wrapper"><img src="images/services1.jpg" loading="lazy"
@@ -402,27 +399,26 @@ a,
               <div class="w-layout-grid drone-garage_feature-2_component">
                 <div class="drone-garage_feature-2_content">
                   <div class="margin-bottom margin-xsmall">
-                    <div class="text-weight-semibold">Repair</div>
+                    <div class="text-weight-semibold" data-content="services_repair_subtitle">Repair</div>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <h2>Expert Drone Repair with Quick Turnaround Times</h2>
+                    <h2 data-content="services_repair_title">Expert Drone Repair with Quick Turnaround Times</h2>
                   </div>
                   <div class="margin-bottom margin-medium">
-                    <p class="text-size-medium">Our repair service specializes in fixing drones using high-quality
-                      parts. With our fast turnaround times, you&#x27;ll be back in the air in no time.</p>
+                    <p class="text-size-medium" data-content="services_repair_description">Our repair service specializes in fixing drones using high-quality parts. With our fast turnaround times, you'll be back in the air in no time.</p>
                   </div>
                   <div class="w-layout-grid drone-garage_feature-2_item-list">
                     <div class="drone-garage_feature-2_text-wrapper">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Quick Fix</h6>
+                        <h6 data-content="services_repair_feature1_title">Quick Fix</h6>
                       </div>
-                      <p>We use only the best parts to ensure your drone is repaired to perfection.</p>
+                      <p data-content="services_repair_feature1_text">We use only the best parts to ensure your drone is repaired to perfection.</p>
                     </div>
                     <div class="drone-garage_feature-2_text-wrapper">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Quality Parts</h6>
+                        <h6 data-content="services_repair_feature2_title">Quality Parts</h6>
                       </div>
-                      <p>Our repair service is known for its attention to detail and use of high-quality parts.</p>
+                      <p data-content="services_repair_feature2_text">Our repair service is known for its attention to detail and use of high-quality parts.</p>
                     </div>
                   </div>
                 </div>
@@ -442,28 +438,26 @@ a,
               <div class="w-layout-grid drone-garage_feature-3_component">
                 <div class="drone-garage_feature-3_content">
                   <div class="margin-bottom margin-xsmall">
-                    <div class="text-weight-semibold">Tuning</div>
+                    <div class="text-weight-semibold" data-content="services_tuning_subtitle">Tuning</div>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <h2>Enhance Your Drone&#x27;s Performance and Flight Characteristics</h2>
+                    <h2 data-content="services_tuning_title">Enhance Your Drone's Performance and Flight Characteristics</h2>
                   </div>
                   <div class="margin-bottom margin-medium">
-                    <p class="text-size-medium">Our Tuning service is designed to maximize your drone&#x27;s potential,
-                      improving its speed, agility, and stability. With our expertise, we can help you achieve the best
-                      possible flight experience.</p>
+                    <p class="text-size-medium" data-content="services_tuning_description">Our Tuning service is designed to maximize your drone's potential, improving its speed, agility, and stability. With our expertise, we can help you achieve the best possible flight experience.</p>
                   </div>
                   <div class="w-layout-grid drone-garage_feature-3_item-list">
                     <div class="drone-garage_feature-3_item">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Speed Boost</h6>
+                        <h6 data-content="services_tuning_feature1_title">Speed Boost</h6>
                       </div>
-                      <p>Unlock the full speed potential of your drone with our advanced tuning techniques.</p>
+                      <p data-content="services_tuning_feature1_text">Unlock the full speed potential of your drone with our advanced tuning techniques.</p>
                     </div>
                     <div class="drone-garage_feature-3_item">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Agility Upgrade</h6>
+                        <h6 data-content="services_tuning_feature2_title">Agility Upgrade</h6>
                       </div>
-                      <p>Experience precise and responsive controls by optimizing your drone&#x27;s agility.</p>
+                      <p data-content="services_tuning_feature2_text">Experience precise and responsive controls by optimizing your drone's agility.</p>
                     </div>
                   </div>
                 </div>
@@ -922,7 +916,7 @@ a,
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66aa136e9a9ec8aec249373f"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-
+  <script type="module" src="js/services-content-manager.js"></script>
   <script>
     $(document).ready(function () {
       $('.drone-garage_faq_question').on('click', function () {
